labs/troubleshooting/specs/ckad/init-container-failing.yaml
apiVersion: v1
kind: Pod
metadata:
  name: init-container-failing
  labels:
    app: troubleshooting-demo
    scenario: init-container
spec:
  containers:
  - name: app
    image: nginx
    ports:
    - containerPort: 80
