labs/troubleshooting/specs/ckad/volume-pvc-pending.yaml
apiVersion: v1
kind: Pod
metadata:
  name: volume-pvc-pending
  labels:
    app: troubleshooting-demo
    scenario: volume
spec:
  containers:
  - name: app
    image: nginx
    volumeMounts:
    - name: data
      mountPath: /usr/share/nginx/html
  volumes:
  - name: data
    persistentVolumeClaim:
      claimName: pvc-pending
